2009-02-05  Perry McFarlane  <perry_m@fastmail.fm>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari_sdl.c: cleaned up display modes.


2009-01-11  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari_sdl.c: -audio16 fixed
* pokeysnd.[ch]: Sound recording must stop when POKEY is reinitialised
* sndsave.c: Chunks in WAV format must be word-aligned,
             16-bit sound recording fixed.


2008-12-27  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari.c: initialize color palette after loading saved state
* cfg.c, mzpokeysnd.c, pokeysnd.c, ui.c: serio_sound* -> POKEYSND_serio_sound*


2008-11-03  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: fix syntax error


2008-10-30  Perry McFarlane  <perry_m@fastmail.fm>
* memory.c: 5200 GTIA c000-cfff and POKEY e800-efff mirrors.
* configure.ac: minor fix for Cygwin.


2008-10-29  Perry McFarlane  <perry_m@fastmail.fm>
* afile.[ch], atari.c, sio.c:  Support .pro images
* ui.c: replace ^R in source with \022
* pbi_bb.c, pbi_mio.c: correct Util_filenamenotset error.
* mzpokeysnd.c, pokey.c, pokey.h: rename SKCTLS -> SKCTL
* monitor.c: 5200 equates.
* DOC/BUGS: add Extract demo.
* Makefile.in: use NestedVM javasource and UnixRuntime by default
* monitor.c: SKCTL and SKSTAT in pokey state output.


2008-10-13  Matthias Reichl  <hias@horus.com>
* pokey.c: fixed the ALLPOT register - it didn't work
  and there was an access outside array bounds


2008-09-21  Petr Stehlik  <pstehlik@sophics.cz>
* ui.c: visual configuration of keyboard joysticks layout, at long last!
  Currently for the SDL target only. Also default joystick mapping
  changed to num pad 4,8,6,5 + right ctrl and A,W,D,S + left ctrl keys.
  Feel free to set up your own mapping and then save the configuration.

* atari_sdl.c: removed keys for combined joystick directions (left+up, etc.)

* util.[ch]: safe_strncpy() added

